# npnn

./: .gitattributes  .gitignore  dataset.py  model.py  pyproject.toml  readme.md  report.ipynb  requirements.txt  search.py  search_result1.csv  search_result2.csv  test.py  train.py  utils.py  viz.py
.github/workflows/: pypi-publish.yml  pythoh-package-publish.yml  pythoh-package-test.yml
checkpoints/2024_0423(1713806930)/: best_model.md5
checkpoints/2024_0423(1713807562)/: best_model.md5
checkpoints/2024_0423(1713808209)/: best_model.md5
checkpoints/2024_0423(1713816056)/: best_model.md5  best_model.xz
checkpoints/2024_0423(1713841292)/: best_model.md5
checkpoints/2024_0423(1713857657)/: best_model.md5
checkpoints/2024_0425(1713993322)/: best_model.md5
checkpoints/2024_0426(1714116650)/: best_model.md5  best_model.xz
logs/search1/: 2024_0423(1713806930).json  2024_0423(1713807562).json  2024_0423(1713808209).json  2024_0423(1713816056).json
logs/search2/: 2024_0423(1713841292).json  2024_0423(1713857657).json  2024_0425(1713993322).json  2024_0426(1714116650).json
nnn/: __init__.py  autograd.py  base.py  functional.py  nn.py  optim.py  optimizer.py  readme.md  test_autograd.py
src/: __init__.py  autograd.py  test_autograd.py
src/npnn/: __init__.py  autograd.py  functional.py  nn.py  optim.py
src/npnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_autograd.py
