[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npnn"
version = "0.0.1"
dependencies = [
  "numpy"
]
requires-python = ">=3.10"
authors = [
  { name="Yang Zhang", email="mail@yangzhang.site" },
]
description = "NumPy Neural Network"
readme = "readme.md"
license = {file = "LICENSE"}
keywords = ["numpy", "neural network", "machine learning", "autograd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
cuda = ["cupy"]

[project.urls]
Homepage = "https://github.com/AIboy996/npnn"