[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npnn"
version = "0.1.0"
dependencies = [
  "numpy"
]
requires-python = ">=3.9"
authors = [
  { name="Yang Zhang", email="mail@yangzhang.site" },
]
description = "NumPy Neural Network"
readme = "readme.md"
license = {file = "LICENSE"}
keywords = ["numpy", "neural network", "machine learning", "autograd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
cuda11x = ["cupy-cuda11x"]
cuda12x = ["cupy-cuda12x"]

[project.urls]
Homepage = "https://github.com/AIboy996/npnn"